fix(alert): left visible gap on overlay

--- a/assets/alert/alert.css
+++ b/assets/alert/alert.css
@@ -118,6 +118,7 @@ button {
 .beacon-alert__base {
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   z-index: 2147482999;
